--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,10 @@ dependencies:
   window_manager: ^0.2.7
   get_it: ^7.2.0
   get: ^4.6.5
+#  desktop_webview_window: ^0.1.6
+  flutter_speed_dial: ^6.0.0
+  path_provider: ^2.0.11
+  webview_windows: ^0.2.1
 
 dev_dependencies:
   flutter_test:
